objects/CustomlO__c.object
<CustomObject>
    <fields>
        <fullName>Field17950__c</fullName>
        <label>Field17950</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field48039__c</fullName>
        <label>Field48039</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pl1__c</fullName>
        <label>pl1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>abc,</fullName>
                </value>
                <value>
                    <fullName>def</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CustomlO</label>
    <nameField>
        <label>CustomlO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomlOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>